fix: image aligned

--- a/site/.vuepress/theme/styles/index.styl
+++ b/site/.vuepress/theme/styles/index.styl
@@ -159,6 +159,7 @@ blockquote
         display block
         margin-left auto
         margin-right auto
+        width: 100%
 
 code
   color lighten($textColor, 20%)
